# merge-garmin-zwift-fit

./: .gitignore  README.md  pyproject.toml
src/merge_activity/: align.py  cli.py  decode.py  encode.py  merge.py
tests/: README.md  test_merge.py
